--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "npx prisma@latest migrate dev  --schema src/prisma/schema.prisma",
-    "db:reset": "npx prisma@latest migrate reset  --schema src/prisma/schema.prisma"
+    "db:migrate-dev": "npx prisma@latest migrate dev  --schema src/prisma/schema.prisma",
+    "db:migrate-prod": "npx prisma@latest migrate deploy  --schema src/prisma/schema.prisma",
+    "db:reset": "npx prisma@latest migrate reset  --schema src/prisma/schema.prisma",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
