--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -47,7 +48,6 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5",
-    "zod-prisma": "^0.1.2"
+    "typescript": "^5"
   }
 }
